# CollatzConjecture

./: .gitignore  CMakeLists.txt  CollatzConfig.h.in  Doxyfile  README.md  client.c  client.h  collatz.c  collatz.h  collatz_counter.cpp  collatz_counter.hpp  collatz_runner.hpp  collatz_runner_cpu.cpp  collatz_runner_cpu.hpp  config.h.in  main.c  main.cpp  plugin_tcp.h  server.c  server.h  types.h
c/: CMakeLists.txt  collatz.c  collatz.h  plugin_tcp.c
cpp/: CMakeLists.txt  collatz_counter.hpp  collatz_counter_client.cpp  collatz_counter_client.hpp  collatz_counter_local.cpp  collatz_counter_local.hpp  collatz_network_type.hpp  collatz_runner.hpp  collatz_runner_boost.cpp  collatz_runner_boost.h  collatz_runner_cpu.cpp  collatz_runner_cpu.hpp  collatz_runner_gpu.cu  collatz_runner_gpu.cuh  collatz_server.cpp  collatz_server.hpp  main.cpp
cuda/: CMakeLists.txt  collatz.cu
src/: collatz_counter.hpp  collatz_counter_client.cpp  collatz_counter_client.hpp  collatz_network_type.hpp  collatz_server.cpp  collatz_server.hpp  main.c  main.cpp  server.h
visualizer/: collatz-vis.html  collatz.js  package-lock.json  package.json
